# embedded-template

./: CMakeLists.txt  Doxyfile  README.md  build.sh  project-name.env
base/: base.md
base/containers/: CMakeLists.txt  cvector_s.c  cvector_s.h
base/containers/playground/: CMakeLists.txt  cvector_s_playground.c
base/containers/unittest/: CMakeLists.txt  cvector_s_unittest.cpp
documents/: documents.md
documents/design/: 0010-embedded-system-overview.md
documents/developing/: documenting-the-code.md
documents/requirements/: 0010-general-0001-real-time-os.req.md  0030-audio-0011-mp3-support.req.md  requirements.md
setup/windows/: install-cmake.sh  install-meld.sh  install-qtcreator.sh  setup-for-windows.md  versions.env
system/: CMakeLists.txt  align_macros.h  atomic.h  extern_c.h
testing/: CMakeLists.txt  testing-readme.md
tools/cmake/: GetGitRevisionDescription.cmake  default_toochain.cmake  default_vars.cmake  default_versions.cmake  set_standard_compiler_flags.cmake  std_utils.cmake
tools/config/: clangtidy-default-checks.cfg
tools/toolchains/: clangstatic.toolchain.cmake  dsp7.toolchain.cmake  emscripten.toolchain.cmake  hostclang.toolchain.cmake  hostlinux.clang.toolchain.cmake  hostlinuxclang.toolchain.cmake  radio.keil.toolchain.cmake  staticanalysis.clangtidy.toolchain.cmake  staticlinux.clangtidy.toolchain.cmake  toolchains.md  web.emscripten.toolchain.cmake
version/: CMakeLists.txt  git_info.c.in  git_info.h  version_info.c.in  version_info.h
version/playground/: CMakeLists.txt  version_playground.c
